--- a/SistemasGastosPersonales/SistemasGastosPersonales/SistemasGastosPersonales.vbproj
+++ b/SistemasGastosPersonales/SistemasGastosPersonales/SistemasGastosPersonales.vbproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.7" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
     <PackageReference Include="System.Data.SQLite" Version="1.0.119" />
     <PackageReference Include="System.Drawing.Common" Version="4.7.2" />
