--- a/SistemaGastosPersonales/SistemaGastosPersonales.vbproj
+++ b/SistemaGastosPersonales/SistemaGastosPersonales.vbproj
@@ -196,6 +196,9 @@
   <ItemGroup>
     <None Include="Resources\Billetera1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\lupa %281%29.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
