--- a/SistemaGastosPersonales/SistemaGastosPersonales.vbproj
+++ b/SistemaGastosPersonales/SistemaGastosPersonales.vbproj
@@ -102,6 +102,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion\Conexion.vb" />
+    <Compile Include="Controles\UsuarioController.vb" />
     <Compile Include="Formularios\frmModificar.Designer.vb">
       <DependentUpon>frmModificar.vb</DependentUpon>
     </Compile>
@@ -129,7 +130,7 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Modelos\Categoria.vb" />
-    <Compile Include="Modelos\Cuenta.vb" />
+    <Compile Include="Modelos\Usuario.vb" />
     <Compile Include="Modelos\Etiqueta.vb" />
     <Compile Include="Modelos\Movimiento.vb" />
     <Compile Include="Modelos\MovimientoEtiqueta.vb" />
@@ -148,7 +149,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="Repositorios\CategoriaRepo.vb" />
     <Compile Include="Seguridad\Hash.vb" />
   </ItemGroup>
   <ItemGroup>
